apps/base/calibre/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre
  namespace: calibre
  labels:
    app.kubernetes.io/name: calibre
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: calibre
